# kaleidoscope

./: CMakeLists.txt
src/: toy.cpp
